--- a/OrderApp.Client/Views/Windows/LoginWindow.xaml
+++ b/OrderApp.Client/Views/Windows/LoginWindow.xaml
@@ -4,9 +4,19 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OrderApp.Client.Views.Windows"
+        xmlns:vm="clr-namespace:OrderApp.Client.ViewModels"
+        xmlns:cmd="clr-namespace:OrderApp.Client.Infrastructure.Command"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800">
+        Title="{Binding Path=Title}" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:LoginWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Label Content="{Binding Path=Label, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,200" Background="{x:Null}" FontSize="18" />
+        <TextBox HorizontalAlignment="Left" Height="21" Margin="309,161,0,0" TextWrapping="Wrap" Text="{Binding Path=Login}" VerticalAlignment="Top" Width="190"/>
+        <TextBox HorizontalAlignment="Left" Height="21" Margin="309,217,0,0" TextWrapping="Wrap" Text="{Binding Path=Password}" VerticalAlignment="Top" Width="190"/>
+        <Button Content="{Binding Path=Button}" HorizontalAlignment="Left" Height="48" Margin="309,264,0,0" VerticalAlignment="Top" Width="190"/>
+
+
     </Grid>
 </Window>
